Update media queries for product cards to ensure accessibility on smaller screens

--- a/src/assets/css/shopPage.css
+++ b/src/assets/css/shopPage.css
@@ -74,6 +74,38 @@
   text-transform: uppercase;
 }
 
+.product-image {
+  height: 50%;
+  width: 10vw;
+}
+
+.products-div {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+  align-items: center;
+  height: 75vh;
+}
+
+.product-card {
+  height: 80%;
+  width: 18%;
+}
+
+.buttons {
+  display: flex;
+  justify-content: space-evenly;
+  height: 5vh;
+}
+
+.product-card p {
+  font-size: 1rem;
+}
+
+.product-name {
+  height: 10vh;
+}
+
 @media (max-width: 767px) {
   .shop-grid__container {
     grid-template-columns: repeat(3, 1fr);
@@ -88,6 +120,38 @@
     margin: 0.5rem;
     font-size: 1rem;
   }
+
+  .product-card {
+    width: 80vw;
+    margin-bottom: 2rem;
+    margin-top: 2rem;
+  }
+
+  .products-div {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    height: auto;
+  }
+
+  .product-image {
+    width: 10vw;
+    height: 25vh;
+  }
+  
+  .buttons {
+    display: flex;
+    flex-direction: column;
+    align-items: space-evenly;
+    height: 20vh;
+    width: 100%;
+  }
+  
+  button {
+    width: 100%;
+  }
+  
 }
 
 @media (max-width: 500px) {
@@ -105,4 +169,6 @@
     margin: 0.25rem;
     font-size: 0.75rem;
   }
+
+  
 }
