--- a/src/assets/css/topDeals.css
+++ b/src/assets/css/topDeals.css
@@ -25,7 +25,6 @@
 
 .topDeal-card__img {
   max-width: 100%;
-  height: auto;
   margin-bottom: 0.5rem; /* add margin to bottom */
   object-fit: cover;
   display: block;
@@ -74,5 +73,13 @@
     grid-template-columns: repeat(4, 1fr);
     grid-template-rows: repeat(2, 1fr);
     grid-gap: 1.25rem;
+  }
+}
+
+@media only screen and (max-width: 767px) {
+  .topDeal-card {
+    width: 50vw;
+    margin-left: 25%;
+    margin-right: 25%;
   }
 }
